# hf-synthetic-data-pharmacopoeia-experiments

./: .gitignore  README.md  data_extraction.py  generate_synthetic_data.py  inspect_synthetic_data.py  merge_and_push.py  push_synthetic_data_to_hub.py  push_to_hub.py  pyproject.toml  requirements.txt  run_slm_inference.py  train_pharmacopeia_slm.py
configs/: default.yaml  l40s.yaml  lightning_studio.yaml
scripts/: 01_extract_data.py  02_generate_synthetic.py  03_push_raw_data.py  04_push_synthetic_data.py  05_train.py  06_merge_and_push.py  07_inference.py  08_bayesian_inference.py
src/pharma_slm/: __init__.py  config.py  telemetry.py
src/pharma_slm/data/: __init__.py  extraction.py  figure_extraction.py  inspection.py
src/pharma_slm/hub/: __init__.py  upload.py
src/pharma_slm/inference/: __init__.py  bayesian.py  runner.py
src/pharma_slm/synthesis/: __init__.py  generator.py
src/pharma_slm/training/: __init__.py  callbacks.py  merge.py  trainer.py
